added contenture and google ads tracking

--- a/app/views/digests/show.iframe.haml
+++ b/app/views/digests/show.iframe.haml
@@ -14,3 +14,5 @@
     %span#timestamp=@stamp.utc
     %br
     %a{:href=>"/#{@stamp.digest}",:target=>"_top"} Certified by TimeCert.org
+    =render :partial=>"shared/contenture"
+    =render :partial=>"shared/ga"
