--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,4 +27,8 @@
         %p
           %a{:href=>"http://stakeventures.com/pages/whoami"}
             (c) 2006-2009 Pelle Braendgaard and Stake Ventures Inc.
+        %p
+          %a{:href=>"http://contenture.com/?s=34281"}Support our site
+    =render :partial=>"shared/contenture"
+    =render :partial=>"shared/ga"
         
