--- a/app/views/digests/show.html.haml
+++ b/app/views/digests/show.html.haml
@@ -31,7 +31,7 @@
   A TimeCert certificate can provide thirty party proof that you were the first to write or create something. By integrating it into your blog, Content Management System or web application this can be done automatically for you.
 
 %h3 Also available as:
-%ul 
+%ul.samples 
   %li 
     %a{:href=>"/#{@stamp.digest}.time"} Plain text timestamp
   %li
