--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,34 +1,40 @@
-%html
+!!! XML
+!!!
+%html{html_attrs}
   %head
     %title TimeCert
-    %link{ :href=>"/stylesheets/styles.css", :media=>"screen",:rel=>"Stylesheet",:type=>"text/css"}
-    %meta{:name=>"viewport",:content=>"width=600"}
+    = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
+    = stylesheet_link_tag 'compiled/print.css', :media => 'print'
+    /[if IE]
+      = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
+    %meta{:name=>"viewport",:content=>"width=700"}
 
   %body
-    #page
+    #container
       #header
-        %ul.tabs
-          %li
-            %a{:href=>"/generate"}
-              Generate digest
-      .wrapper#body
+        %ul.top_bar
+          - unless current_page?("/generate")
+            %li
+              %a{:href=>"/generate"}
+                Generate digest
         .logo
           %a{:href => "/"}
             %img{:src=>'/images/logo75.png',:alt=>'TimeCert',:width=>"75",:height=>'75'}
-        .content
-          = yield
-    .footer
-      .stuff
-        %p 
-          Source code available on
-          %a{:href=>"http://github.com/pelle/timecert/tree/master"}
-            GitHub
-          %a{:href=>"http://github.com/pelle/timecert/wikis"}Development Wiki
-        %p
-          %a{:href=>"http://stakeventures.com/pages/whoami"}
-            (c) 2006-2009 Pelle Braendgaard and Stake Ventures Inc.
-        %p
-          %a{:href=>"http://contenture.com/?s=34281"}Support our site
+      #content
+        = yield
+      #footer
+        %ul
+          %li.first 
+            %a{:href=>"http://github.com/pelle/timecert/tree/master"} Source on Github
+          %li
+            %a{:href=>"http://github.com/pelle/timecert/wikis"} Development Wiki
+          %li
+            %a{:href=>"http://stakeventures.com"} Blog
+          %li
+            %a{:href=>"http://stakeventures.com/pages/whoami"} Who am I?
+          %li
+            %a{:href=>"http://contenture.com/?s=34281"} Support TimeCert
+        %p &copy; 2006-2009 Pelle Braendgaard and Stake Ventures Inc.
     =render :partial=>"shared/contenture"
     =render :partial=>"shared/ga"
         
