--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,44 +1,45 @@
 %p 
   TimeCert is a service for timestamping content. This provides evidence that something existed at a given time. TimeCert will give you the timestamp for when someone first referenced a given digest.
 %p 
-  A Digest is like a fingerprint for a chunk of data. It looks like this: 
-  %tt a94a8fe5ccb19ba61c4c0873d391e987982fbbd3
+  A Digest is like a fingerprint for a chunk of data. Digests looks like this:
+%p.digest
+  a94a8fe5ccb19ba61c4c0873d391e987982fbbd3
 %p 
-  An application can generate this digest easily. Technically speaking it is a Hex encoded SHA1 digest.
+  While this may not mean anything to you and me, an application can generate this digest very easily and compare it against other digests. Technically speaking it is a Hex encoded SHA1 digest.
 %p
-  To use this in your own application all you have to do is do a http get request at one of the following URLS:
-%ul
+  To use this in your own application all you have to do is do a http get request at one of the following URLS, where you replace the digest with your own digest:
+
+%ul.samples
   %li
     HTML
-    %br
     %a{:href=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3"}
       http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3
   %li 
     Just the time please 
-    %br
     %a{:href=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.time"}
       http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.time
   %li 
-    Plain text ini 
-    %br
-    %a{:href=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.txt"}
-      http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.txt
+    JSON 
+    %a{:href=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.json"}
+      http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.json
   %li
     XML 
-    %br
     %a{:href=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.xml"}
       http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.xml
   %li 
     YAML 
-    %br
     %a{:href=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.yml"}
       http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.yml
-%h4 Embedded iframe
-%p Embedded in your own web page or blog
-%iframe{:src=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.iframe",:width=>"450px",:height=>"30px"}
-%br
+      
+%h3 Embedded iframe
+%p You can embed a digest within your own blog or web application. It will look like this:
+%p
+  %iframe{:src=>"/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.iframe",:width=>"450px",:height=>"30px"}
+
+%p This can be done by pasting this code in to your html page and having your blog or application calculate the digest for it:
+
 =source_code_select "<iframe src=\"http://timecert.org/a94a8fe5ccb19ba61c4c0873d391e987982fbbd3.iframe\" width=\"450px\" height=\"30px\"></frame>"
-%br
+
 %p
   %a{:href=>"http://stakeventures.com/articles/2008/07/17/relaunching-timecert-a-trusted-third-party-time-stamping-service"} Read the TimeCert launch post for more...
 %h3 TimeCert is OpenSource
@@ -49,21 +50,17 @@
   TimeCert was written in
   %a{:href=>"http://ruby-lang.org"} Ruby
   using the
-  %a{:href=>"http://merbivore.com"} Merb Framework
-  and
-  %a{:href=>"http://datamapper.org"} Datamapper ORM layer.
+  %a{:href=>"http://rubyonrails.org"} Ruby on Rails Framework
 .links
   %h3 Links to my other Projects
-  %ul 
+  %h4 My blogs
+  %ul
     %li 
-      %h4 My blogs
-      %ul
-        %li 
-          %a{:href=>"http://stakeventures.com"} My personal blog
-        %li 
-          %a{:href=>"http://blog.extraeagle.com"} My company blog
+      %a{:href=>"http://stakeventures.com"} My personal blog
     %li 
-      %h4 My other web apps
-      %ul
-        %li 
-          %a{:href=>"http://agree2.com"} Agree2 - Take back the contract
+      %a{:href=>"http://blog.extraeagle.com"} My company blog
+      
+  %h4 My other web apps
+  %ul
+    %li 
+      %a{:href=>"http://agree2.com"} Agree2 - Reach Agreement
