Added som developer documentation and cleaned up a bit.

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -38,6 +38,10 @@ body
     position: absolute
     top: 1em
     right: 0px
+    li
+      border-left: 1px solid #aaa
+    li.first
+      border-left: none
   
     
 #content
@@ -111,4 +115,6 @@ ul.samples
 .links
   border-top: 1px solid #aaa
   padding-top: 1em
-    
+
+.gist
+  font-size: 80%
