Updated dependencies and some css

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -1,15 +1,10 @@
-@import base.sass
+@import partials/base.sass
 @import compass/reset.sass
 @import blueprint/modules/colors.sass
 @import blueprint/modules/grid.sass
 @import blueprint/modules/typography.sass
 @import blueprint/modules/utilities.sass
 @import compass/utilities.sass
-
-//+blueprint
-// Remove the scaffolding when you're ready to start doing visual design.
-// Or leave it in if you're happy with how blueprint looks out-of-the-box
-//+blueprint-scaffolding
 
 body
   +blueprint-typography
