Duh. off course posting to a page cached page doesn't work

--- a/app/views/github/show.html.haml
+++ b/app/views/github/show.html.haml
@@ -1,5 +1,5 @@
 :textile
-  h1. Timestamping your GitHub commits
+  h1. Timestamp your GitHub commits
 
   "GitHub":http://github.com is a great site for managing both public and private code repositories. It is built on top of Git a distributed version control system, which uses SHA1 digests as part of it's fundamental architecture, just like TimeCert.
   
