--- a/app/views/developers/index.html.haml
+++ b/app/views/developers/index.html.haml
@@ -43,3 +43,7 @@
   %li= link_to "Python",:action=>"python"
   %li= link_to "Drupal","http://drupal.org/project/timecert"
   
+:textile
+  h2. TimeCert and Github
+  
+  You can automatically timestamp all your code by adding our new "GitHub Post Receive Hook":http://timecert.org/github. This works even for your private projects without having to share your private code with us.
