--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,3 +1,6 @@
+%p
+  %strong New:
+  =link_to "Timestamp your GitHub projects automatically","/github"
 %p 
   TimeCert is a service for timestamping content. This provides evidence that something existed at a given time. TimeCert will give you the timestamp for when someone first referenced a given digest.
 %p 
