--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,13 +32,13 @@
       #footer
         %ul
           %li.first 
-            %a{:href=>"http://github.com/pelle/timecert/tree/master"} Source on Github
+            %a{:href=>"http://github.com/pelle/timecert/tree/master"} Source
           %li
-            %a{:href=>"http://github.com/pelle/timecert/wikis"} Development Wiki
+            %a{:href=>"/audit"} Audit
+          %li
+            %a{:href=>"http://github.com/pelle/timecert/wikis"} Wiki
           %li
             %a{:href=>"http://stakeventures.com"} Blog
-          %li
-            %a{:href=>"http://stakeventures.com/pages/whoami"} Who am I?
           %li
             %a{:href=>"http://contenture.com/?s=34281"} Support TimeCert
         %p &copy; 2006-2009 Pelle Braendgaard and Stake Ventures Inc.
