Fixes dumb spelling error. cleanup of top bar.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
                 Developers
           - unless current_page?("/github")
             %li
-              %a{:href=>"/github"} TimeCert your GitHub Projects          
+              %a{:href=>"/github"} GitHub integration
           - unless current_page?("/generate")
             %li
               %a{:href=>"/generate"}
