--- a/app/views/digests/show.html.haml
+++ b/app/views/digests/show.html.haml
@@ -28,7 +28,7 @@
   
 %h3 Whats this good for?
 %p
-  A TimeCert certificate can provide thirty party proof that you were the first to write or create something. By integrating it into your blog, Content Management System or web application this can be done automatically for you.
+  A TimeCert certificate can provide third party proof that you were the first to write or create something. By integrating it into your blog, Content Management System or web application this can be done automatically for you.
 
 %h3 Also available as:
 %ul.samples 
