--- a/public/stylesheets/compiled/print.css
+++ b/public/stylesheets/compiled/print.css
@@ -1,42 +1,39 @@
-/* line 17, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-body { line-height: 1.5; font-family: Helvetica Neue, Arial, Helvetica, sans-serif; color: #000; background: none; font-size: 10pt; }
+/* line 29, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+body { line-height: 1.5; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; color: black; background: none; font-size: 10pt; }
 
-/* line 39, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
+/* line 52, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
 .container { background: none; }
 
-/* line 41, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-hr { background: #ccc; color: #ccc; width: 100%; height: 2px; margin: 2em 0; padding: 0; border: none; }
-/* line 49, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-hr.space { background: #fff; color: #fff; }
+/* line 54, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+hr { background: #cccccc; color: #cccccc; width: 100%; height: 2px; margin: 2em 0; padding: 0; border: none; }
+/* line 62, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+hr.space { background: white; color: white; }
 
-/* line 52, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-h1, h2, h3, h4, h5, h6 { font-family: Helvetica Neue, Arial, Helvetica, sans-serif; }
+/* line 65, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+h1, h2, h3, h4, h5, h6 { font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; }
 
-/* line 54, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-code { font-size: .9em; font-family: 'andale mono', 'lucida console', monospace; }
+/* line 67, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+code { font-size: 0.9em; font-family: "andale mono", "lucida console", monospace; }
 
-/* line 58, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-img { display: inline; float: left; margin: 1.5em 1.5em 1.5em 0; }
-
-/* line 62, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
+/* line 72, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
 a img { border: none; }
-/* line 64, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
+/* line 75, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
 a:link, a:visited { background: transparent; font-weight: 700; text-decoration: underline; }
 
-/* line 69, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
+/* line 79, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
 p img.top { margin-top: 0; }
 
-/* line 71, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-blockquote { margin: 1.5em; padding: 1em; font-style: italic; font-size: .9em; }
+/* line 81, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+blockquote { margin: 1.5em; padding: 1em; font-style: italic; font-size: 0.9em; }
 
-/* line 76, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-.small { font-size: .9em; }
+/* line 86, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+.small { font-size: 0.9em; }
 
-/* line 78, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
+/* line 88, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
 .large { font-size: 1.1em; }
 
-/* line 80, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
-.quiet { color: #999; }
+/* line 90, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+.quiet { color: #999999; }
 
-/* line 82, ../../../../../../../Library/Ruby/Gems/1.8/gems/chriseppstein-compass-0.8.16/frameworks/blueprint/stylesheets/blueprint/_print.sass */
+/* line 92, ../../../../../.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_print.scss */
 .hide { display: none; }
