--- a/app/stylesheets/partials/_base.sass
+++ b/app/stylesheets/partials/_base.sass
@@ -1,8 +1,8 @@
-!background_color = #FFF
-!dark_background_color = !background_color - #222
-!blueprint_grid_width = 20px
+$background_color: white
+$dark_background_color: $background_color - #222222
+$blueprint_grid_width: 20px
 
-!source_font = Monaco,Consolas,Liberation Mono,Bitstream Vera Mono,monospace
+$source_font: Monaco, Consolas, Liberation Mono, Bitstream Vera Mono, monospace
 
 =source-code
-  font-family= !source_font
+  font-family: $source_font
